# protector

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
hashgen/: CMakeLists.txt  main.c
include/: hardcore.h  hardening.h  protector_common.h  protector_log.h  protector_state.h
src/: CMakeLists.txt
src/hardcore/: hardening_loader.c  init.c  proc_check.c  secret.c
src/hardening/: init.c  integrity.c  memory_check.c  roundtrip.c
